--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,18 @@
 
 menu:
   主页: /
-  随笔: /tags/随笔/
+  # 所有文章: /archives/
+  # 调试: /bugs/
+  # 随笔: /tags/随笔/
+  # 标签云: /tags/
+  # 关于我: /about/
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "github.com/panlei7"
+  #weibo: "#"
+  #rss: "#"
+  #zhihu: "#"
   #qq: "#"
   #weixin: "#"
   #jianshu: "#"
@@ -17,7 +21,7 @@ subnav:
   #segmentfault: "#"
   #bilibili: "#"
   #acfun: "#"
-  #mail: "mailto:litten225@qq.com"
+  mail: &#112;&#97;&#110;&#108;&#101;&#105;&#46;&#108;&#105;&#102;&#101;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;
   #facebook: "#"
   #google: "#"
   #twitter: "#"
@@ -37,7 +41,7 @@ excerpt_link: more
 # 文章卡片右下角常驻链接，不需要请设置为false
 show_all_link: '展开全文'
 # 数学公式
-mathjax: false
+mathjax: true
 # 是否在新窗口打开链接
 open_in_new: false
 
@@ -56,10 +60,10 @@ weixin:
 # Miscellaneous
 baidu_analytics: ''
 google_analytics: ''
-favicon: /favicon.png
+favicon: /images/favicon.ico
 
 #你的头像url
-avatar:
+avatar: /images/avatar.png
 
 #是否开启分享
 share_jia: true
@@ -71,7 +75,7 @@ share_jia: true
 duoshuo: false
 
 #2、网易云跟帖
-wangyiyun: false
+wangyiyun: true
 
 #3、畅言
 changyan_appid: false
